--- a/css/custom.css
+++ b/css/custom.css
@@ -11,8 +11,24 @@
   text-decoration-color: hsl(205, 65%, 55%)
 }
 
+.wrapper {
+  display: grid;
+  grid-template-columns: 1fr min(60ch, calc(100% - 64px)) min(60ch, calc(100% - 64px)) 1fr;
+  grid-column-gap: 32px;
+}
 
+.wrapper > * {
+  grid-column: 2;
+}
+.full-bleed {
+  width: 100%;
+  grid-column: 1 / -1;
+}
 
+.flip-count {
+  max-width: 6ch;
+  text-align: center;
+}
 /* ====== ====== ANIMATIONS ====== ====== */
 
 
