--- a/static/index.hbs
+++ b/static/index.hbs
@@ -12,9 +12,10 @@
     {{> social_media}}
     {{> favicons}}
   </head>
-  <body class="fade-in font-body text-18 bg-gray-1 overflow-x-hidden w-screen relative sm:text-26 lg:text-45">
-    <section id="app" class="overflow-x-hidden w-screen relative">
+  <body id="app">
+<!--  <body  class="fade-in font-body text-18 bg-gray-1 overflow-x-hidden w-screen relative sm:text-26 lg:text-45">-->
+<!--    <section id="app" class="overflow-x-hidden w-screen relative">-->
       {{> loading_page}}
-    </section>
+<!--    </section>-->
   </body>
 </html>
