--- a/static/templates/loading_page.hbs
+++ b/static/templates/loading_page.hbs
@@ -1,5 +1,5 @@
 <div id="loading-page" class="fade-in h-screen flex flex-col items-center justify-center">
-    <h1 class="-mt-10vh font-sans font-light text-29 text-gray-10 sm:text-45 lg:text-80">YOU ARE AWESOME!</h1>
+    <h1 class="-mt-10vh font-sans font-light text-29 text-gray-10 sm:text-45 lg:text-80">GENERATING SALT</h1>
     {{! spinner from https://loading.io }}
     <svg
             class="mt-4 h-12 rotate sm:mt-5 sm:h-16 lg:mt-8 lg:h-24"
